fixed 'invisible but reachable'

--- a/userChrome.css
+++ b/userChrome.css
@@ -54,12 +54,12 @@
       margin-right: 0px !important;
       transition-property: opacity;
       transition-duration: 0.15s !important;
-    box-shadow: 5px 15px 101px 22px rgba(0,0,0, calc(0.40 + var(--shadow-strong)));
+      box-shadow: 5px 15px 101px 22px rgba(0,0,0, calc(0.40 + var(--shadow-strong)));
   }
   .closeit {
       opacity: 0;
       box-shadow: none !important;
-      margin-right: calc(-100vh * 0.4);
+      margin-top: calc(-100vh * 2);
       transition-property: opacity;
       transition-duration: 0.15s !important;
   }
